--- a/.travis.yml
+++ b/.travis.yml
@@ -11,6 +11,6 @@ install:
 services:
   - sqlite3
 script:
-  - python -m unittest discover
+  - coverage run --omit=*/site-packages/*,*/tests/* -m unittest discover -s tests
 after_success:
   coveralls
